[package]
name = "fastax"
version = "1.4.0"
authors = ["Picani <picani@laposte.net>"]
license = "MIT"
edition = "2018"
description = "Make phylogenetic trees and lineages from the NCBI Taxonomy database"
readme = "README.md"
repository = "https://github.com/Picani/fastax"
categories = ["command-line-utilities", "science"]
keywords = ["cli", "bioinformatics", "phylogenetics"]

[dependencies]
ansi_term = "0.11"
csv = "1"
exitcode = "1"
ftp = "3"
itertools = "0.8"
log = "0.4"
loggerv = "0.7"
md5 = "0.6"
rusqlite = "0.16"
# simple_logger = "1.0.1"
structopt = "0.2"
xdg = "^2"
zip = "0.5"
