[package]
name = "fastax"
version = "1.4.0"
authors = ["Picani <picani@laposte.net>"]
license = "MIT"
edition = "2018"
description = "Make phylogenetic trees and lineages from the NCBI Taxonomy database"
readme = "README.md"
repository = "https://github.com/Picani/fastax"
categories = ["command-line-utilities", "science"]
keywords = ["cli", "bioinformatics", "phylogenetics"]

[dependencies]
ansi_term = "0.12"
csv = "1"
exitcode = "1"
itertools = "0.10"
log = "0.4"
loggerv = "0.7"
md5 = "0.7"
rusqlite = "0.28"
# simple_logger = "1.0.1"
structopt = "0.3"
suppaftp = "^5.1.0"
tempfile = "3"
xdg = "^2"
zip = "0.6"
